mydata-backend/mydata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydata-backend-app
  namespace: mydata
  labels:
    app: mydata-backend-app
    app.kubernetes.io/version: v.1.0    

spec:
  replicas: 3
  selector: 
    matchLabels:
      app: mydata-backend-app
      version: v.1.0
  template:
    metadata:
      name: mydata-backend-app
      labels:
        app: mydata-backend-app
        version: v.1.0
    spec:
      containers:
      - name: mydata-backend-app
        image: scottsbaldwin/docker-hello-world:latest
        ports:
        - containerPort: 80
