mydata-backend/mydata-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mydata-backend-app
  namespace: mydata
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: mydata-backend-app
            servicePort: 80
          path: /source(/|$)(.*)
